[package]
name = "ble-to-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11.0", features = ["serde"] }
serde = "1.0.188"
serde_json = "1.0.105"
serde_with = "3.3.0"
rand = "0.8.5"
uuid = "1.4.1"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
envconfig = "0.10.0"
rumqttc = "0.22.0"
hex = "0.4.3"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
memphis-rust-community = { version = "0.3.2", features = ["full"] }
async-trait = "0.1.73"
